--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Figtree:wght@300..900&display=swap');
 * {
     box-sizing: border-box;
     margin: 0;
@@ -16,10 +17,57 @@ body {
 
 .card {
     text-align: center;
-    background-color: hsl(0, 0%, 12%);
+    background-color: gray;
+    width: 100%;
     max-width: 375px;
-    padding: 20px;
+    padding: 20px 30px;
     color: hsl(0, 0%, 100%);
-    font-family: 'Inter', sans-serif;
+    font-family: 'Figtree', sans-serif;
     border-radius: 15px;
+}
+
+.image img {
+    width: 86px;
+    height: 86px;
+    border-radius: 50%;
+    margin-top: 20px;
+    object-fit: cover;
+}
+
+h2 {
+    margin-top: 10px;
+    font-weight: 600;
+}
+
+.location {
+    font-size: 14px;
+    font-weight: 600;
+    color: hsl(75, 94%, 57%);
+}
+
+.bio {
+    font-size: 14px;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+}
+
+.button {
+    font-family: 'Figtree', sans-serif;
+    font-weight: 700;
+    padding: 15px;
+    color: hsl(0, 0%, 100%);
+    background-color: hsl(0, 0%, 20%);
+    cursor: pointer;
+    text-decoration: none;
+    border: none;
+    border-radius: 8px;
+}
+
+button:hover {
+    background-color: hsl(75, 94%, 57%);
 }
